#
# WARNING: If you modify the files installed here, change the version
# number of the enigma2-fonts package in enigma2.bb.
#
installdir = $(datadir)/fonts

dist_install_DATA = \
	Army_Regular_L.ttf \
	LiberationSans-BoldItalic.ttf \
	tuxtxt.ttf \
	ae_AlMateen.ttf \
	DroidSans-Bold.ttf \
	LiberationSans-Bold.ttf \
	md_khmurabi_10.ttf \
	valis_enigma.ttf \
	andale.ttf \
	esp_0.ttf \
	LiberationSans-Italic.ttf \
	nmsbd2.ttf \
	Army_Bold_G.ttf \
	goodtime.ttf \
	LiberationSans-Regular.ttf \
	nmsbd.ttf \
	army-digital.ttf \
	lcd.ttf \
	lsb.ttf
